--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,5 @@ hivemq-extension-sdk.version=4.0.0
 # plugins
 #
 plugin.hivemq-extension.version=1.0.0
+plugin.license.version=0.15.0
 plugin.asciidoctor.version=3.2.0
