--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,5 @@ hivemq-extension-sdk.version=4.0.0
 #
 plugin.hivemq-extension.version=1.0.0
 plugin.license.version=0.15.0
+plugin.utf8.version=0.1.0
 plugin.asciidoctor.version=3.2.0
