--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ hivemq-extension-sdk.version=4.0.0
 #
 # plugins
 #
-plugin.hivemq-extension.version=2.1.0
+plugin.hivemq-extension.version=2.1.2
 plugin.license.version=0.16.1
-plugin.utf8.version=0.1.0
+plugin.defaults.version=0.2.0
 plugin.asciidoctor.version=3.3.2
