--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,18 +1,21 @@
 name: CI Check
 
-on: [ push ]
+on:
+  push:
+    branches: [ "**" ]
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 11
-          cache: gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Check
         run: ./gradlew check
